--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -1,20 +1,4 @@
-/* body{
-    background-image: url(../IMG/homee.jpeg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 100%;
-    height: 100%;
-    
-}
-.background{
-    margin-top: 3rem;
-    width: 100%;
-    /* background-color: #7a7573; 
-    height: 100vh;
-     border: 2px solid white; 
-    opacity: 0.95;
-} */
+
 .background h2{
     font-size: 5rem;
     font-weight: bolder;
@@ -28,7 +12,7 @@
 
 
 .background p{
-    margin-left: 5px;
+    margin-left: .5rem;
 }
 
 /* media queries */
