--- a/src/Components/nav.css
+++ b/src/Components/nav.css
@@ -24,6 +24,7 @@
         width: 100%;
         margin: 0;
         padding: 0;
+        height: 9rem;
     }
     .nav-item{
         margin-top:0;
